@@ -40,6 +40,16 @@ OldWorld systems have floppy drives, so use the floppy drive to launch
 the installer, and then point the installer to the CD for the needed
 files.
 
+</para><para>
+
+To boot &debian; CD/DVD on Pegasos II machine, hold <keycap>Esc</keycap> 
+key immediately after pressing the power-on button, when SmartFirmware 
+prompt appears, type 
+
+<informalexample><screen>
+boot cd install/pegasos
+</screen></informalexample>
+
 </para>
   </sect2>
 
