@@ -69,8 +69,9 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   [ Milan Kupcevic ]
   * Clarify how to boot PowerMacs from external Firewire and internal
     factory default CD/DVD drives. Closes #378119.
+  * Document how to boot Pegasos II from factory default CD/DVD drive.
 
- -- Samuel Thibault <sthibault@debian.org>  Tue, 21 Feb 2012 20:47:50 +0100
+ -- Milan Kupcevic <milan@physics.harvard.edu>  Sat, 30 Jun 2012 17:12:20 -0400
 
 installation-guide (20110122) unstable; urgency=low
 
